@@ -68,5 +68,5 @@ $config['message_show_email'] = true;
 //$config['skip_deleted'] = true;
 
 // PLUGINS
-$config['plugins'] = array('managesieve', 'password');
+$config['plugins'] = array('managesieve', 'password', 'enigma');
 
